<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/disconnected_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/largeText"
				android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/large_text" />

            <Button
                android:id="@+id/scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_200"
                android:text="@string/button_scan" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connected_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/idLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/GlassesBattery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/glasses_id" />

                <TextView
                    android:id="@+id/fw_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/firmware" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/glasses_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/glasses_id"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/firmware"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/latitude"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/longitude" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/altitude"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/altitude" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/altitudeMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:text="@string/altitude" />

                <TextView
                    android:id="@+id/altitudeMaxi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:text="@string/altitude" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/course"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/bearing" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/speed" />
                <Spinner
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="start|bottom"
                    android:entries="@array/unit_array"
                    android:text="@string/unit" />
            </LinearLayout>

            <TextView
                android:id="@+id/chgeunit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="click on km/hr to change the speed unit"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/resetMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp" />
                <TextView
                    android:id="@+id/maxSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text=" max Spd: 0.0 km\/h" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/sensorSwitch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:checked="true"
                    android:text="@string/sensor"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

           <LinearLayout
                android:id="@+id/lumaLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lumaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/brightness" />

                <SeekBar
                    android:id="@+id/luminanceSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="12" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/button_disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/error"
                android:text="@string/menu_disconnect" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <TextView
                android:id="@+id/chgeapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/purple_500"
                android:text="For sailing, consider changing this app to the new :\n Activelook SAILING"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
